Test HybridCRT and not shipping a CRT at all...

--- a/src/cppwinrt.build.pre.props
+++ b/src/cppwinrt.build.pre.props
@@ -54,6 +54,7 @@
        in our CascadiaPackage project.
   -->
   <PropertyGroup>
+	  <_VC_Target_Library_Platform>Desktop</_VC_Target_Library_Platform>
     <_NoWinAPIFamilyApp>true</_NoWinAPIFamilyApp>
   </PropertyGroup>
 
